ingress_grafana.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: stable
    meta.helm.sh/release-namespace: prometheus
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2024-05-07T15:00:23Z"
  generation: 6
  labels:
    app.kubernetes.io/instance: stable
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 10.4.1
    helm.sh/chart: grafana-7.3.8
  name: stable-grafana
  namespace: prometheus
  resourceVersion: "3314114"
  uid: 93fb2e64-b6d6-40e1-9e35-c5268e914d36
spec:
  ingressClassName: nginx
  rules:
  - host: kube.eta2u.demo
    http:
      paths:
      - backend:
          service:
            name: stable-grafana
            port:
              number: 3000
        path: /grafana/?(.*)
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.40.0.136
