ingress_prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: kube.eta2u.demo
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: stable-kube-prometheus-sta-prometheus
                port:
                  number: 9090
